tests/fail/implicit_box.stderr
tests/fail/implicit_box.tk:6:11: error[E0459]: Implicit heap-boxing via pointer initialization is prohibited. Use explicit allocation like 'new Point(...)' stringently
tests/fail/implicit_box.tk:7:6: error[E0421]: Member access 'x' on non-shape type 'p'
tests/fail/implicit_box.tk:8:26: error[E0421]: Member access 'x' on non-shape type 'p'
tests/fail/implicit_box.tk:9:13: error[E0421]: Member access 'x' on non-shape type 'p'
tests/fail/implicit_box.tk:13:11: error[E0459]: Implicit heap-boxing via pointer initialization is prohibited. Use explicit allocation like 'new Point(...)' stringently
tests/fail/implicit_box.tk:15:7: error[E0421]: Member access 'x' on non-shape type 's1'
tests/fail/implicit_box.tk:16:28: error[E0421]: Member access 'x' on non-shape type 's1'
tests/fail/implicit_box.tk:17:14: error[E0421]: Member access 'x' on non-shape type 's1'
tests/fail/implicit_box.tk:21:15: error[E0459]: Implicit heap-boxing via pointer initialization is prohibited. Use explicit allocation like 'new Point(...)' stringently
